--- a/index.html
+++ b/index.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Parcel Sandbox</title>
-		<meta charset="UTF-8" />
-	</head>
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
 
-	<body>
-		<div id="app"></div>
-		<!-- Ex1 -->
-		<h1>Hello World</h1>
-		<!-- Ex:2 -->
-		<table>
-			<tr>
-				<th>Name</th>
-				<th>Price</th>
-			</tr>
-			<tr>
-				<td>Pho</td>
-				<td>11.2€</td>
-			</tr>
-			<tr>
-				<td>Bun Thit nuong</td>
-				<td>10.9€</td>
-			</tr>
-			<tr>
-				<td>Bun Bo Hue</td>
-				<td>8.9€</td>
-			</tr>
-			<tr>
-				<td>Com tam</td>
-				<td>13.9€</td>
-			</tr>
-			<tr>
-				<td>Bun cha ca</td>
-				<td>15.5€</td>
-			</tr>
-		</table>
-		<!-- Ex:3-->
-		<ul id="list">
-			<li>Hi!</li>
-			<li>I'm</li>
-			<li>Phong</li>
-			<li>Nice to meet you!</li>
-		</ul>
+  <body>
+    <div id="app"></div>
+    <!-- Ex1 -->
+    <h1>Hello World</h1>
+    <!-- Ex:2 -->
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Price</th>
+      </tr>
+      <tr>
+        <td>Pho</td>
+        <td>11.2€</td>
+      </tr>
+      <tr>
+        <td>Bun Thit nuong</td>
+        <td>10.9€</td>
+      </tr>
+      <tr>
+        <td>Bun Bo Hue</td>
+        <td>8.9€</td>
+      </tr>
+      <tr>
+        <td>Com tam</td>
+        <td>13.9€</td>
+      </tr>
+      <tr>
+        <td>Bun cha ca</td>
+        <td>15.5€</td>
+      </tr>
+    </table>
+    <!-- Ex:3-->
+    <ul id="list"></ul>
 
-		<textarea id="text" rows="3" cols="50"></textarea>
+    <textarea id="text" rows="3" cols="50"></textarea>
 
-		<button id="add-comment">Add</button>
-		<button id="remove-comments">RemoveAll</button>
+    <button id="add-comment">Add</button>
+    <button id="remove-comments">RemoveAll</button>
 
-		<script src="src/index.js"></script>
-	</body>
+    <script src="src/index.js"></script>
+  </body>
 </html>
